--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
     </main>
     <!-- jjgdjlgj -->
     <!-- rlvf,vf -->
+    <!-- vf vd d -->
+    <!-- cdv -->
     <div class="left">
       <div class="left__timer timer">
         <div class="timer__field">
